--- a/pages/beat.html
+++ b/pages/beat.html
@@ -86,27 +86,26 @@
 
 
 					
-					<strong>Problem Statement</strong></br>
+					<strong class="topHeading">Problem Statement</strong></br>
 				Design an application that helps connect people through music</br></br>
 
-				<strong>Solution Statement</strong></br>
-				Our solution aims to augment the uNav interface by creating an accessibility mode which changes the layout to make it more accessible using uNav control panel. The uNav Compatibility Mode targets user’s pain points on a community level for users who are using the uNav interface.<br><br>
+				<strong class="topHeading">Solution Statement</strong></br>
+				A platform which enables users to connect based on similar music interests. The users can create and share their music profiles, music moods, music player - a one stop solution for all music needs.<br><br>
 
-				<strong>Role</strong></br>
-			User Experience Research</br>
-			Prototype Development
+			<strong class="topHeading">Role</strong></br>
+			I was responsible for conducting User Experience Research overnight which guided all the features and converted individual screens into a interactive prototype.
 			<br><br>
 
 
-			<strong>Team</strong></br>
+			<strong class="topHeading">Team</strong></br>
 			Pranshu Bansal,
 			Varnit Jain, 
 			Sarthak Marwaha,
 			Shikhar Sehdev,
 		Abhinav Thukral</br></br>
 
-		<strong>Timeline</strong></br>
-	18:00, 24 March 2017 - 10:00, 25 March 2017</br></br>
+		<strong class="topHeading">Timeline</strong></br>
+	18:00, 24 March 2017 - 10:00, 25 March 2017 (16 hours)</br></br>
 
 </div>
 
@@ -114,6 +113,7 @@
 	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/OTw89jL6Nmw" allowfullscreen></iframe>
 </div>
 
+<br>
 
 <hr width="100%">
 
@@ -130,7 +130,7 @@
 		<p class="sectionHeading"><strong>RESEARCH</strong></p><br>
 
 
-		<p><strong>Survey</strong></p>
+		<strong class="topHeading">Survey</strong>
 		<p class="contentTextDown">
 			We had an hour to conduct a survey, that would help us validate our ideas and know more about our audience. We spread across a google form and managed to received 62 responses from students in the age group of 15-21.<br><br>
 
@@ -151,9 +151,9 @@
 			84% people would be open to listening to lesser known artists. And 63% said that they would like to share their mood with their friends with a song. In the music player section, we added a button to share a 10 second clip of the song they're listening to as "Mood". The browse tab allowed users to listen to new, trending artists, works of music, that would not generally show up in their feed.<br><br><br><br></p>
 
 
-			<p><strong>Hooked Behaviour</strong></p>
+			<strong class="topHeading">The Pull Factor</strong>
 			<p class="contentTextDown">
-				The elements of design for a platform that people come back to use. The Hooked model of behavior design by Nir Eyal consists of 4 key points:<br><br></p>
+				The elements of design for a platform that people come back to use. The Hooked model of behavior design by Nir Eyal consists of 4 key points:</p>
 
 				<strong class="contentTextDown">Action: Accomplishing something with the app is a limited number of taps away</strong>
 				<ul class="contentText2">
