--- a/pages/mime.html
+++ b/pages/mime.html
@@ -89,30 +89,28 @@
 
 
 					
-				<strong>Hypothesis</strong></br>
+				<strong  class="topHeading">Hypothesis</strong></br>
 				Meme preferences can be an intrinsic indicator of personality traits</br></br>
 
-				<strong>Solution Statement</strong></br>
+				<strong  class="topHeading">Solution Statement</strong></br>
 				An Android platform for all meme needs - a maker space where users can create memes, a personalized meme feed, and a space to connect with other meme enthusiasts.<br><br>
 
-			<strong>Role</strong></br>
-			Product Manager</br>
-			Android Development</br>
-			User Excperience Research
+			<strong  class="topHeading">Role</strong></br>
+			I was responsible for managing the project and ensuring our team met all the deadlines. I was responsible for conducting User Experience Research at each stage of the project while leading the developement team. We were able to design, develope, and deploy a full scale app within 15 months. 
 			<br><br>
 
 
-			<strong>Team</strong></br>
-			Pranshu Bansal</br>
-			Chirag Jain</br>
-			Varnit Jain</br>
-			Ponnurangam Kumaruguru</br>
+			<strong  class="topHeading">Team</strong></br>
+			Pranshu Bansal, 
+			Chirag Jain, 
+			Varnit Jain, 
+			Ponnurangam Kumaruguru, 
 			Sarthak Marwaha
 		</br></br>
-		<strong>Timeline</strong></br>
+		<strong  class="topHeading">Timeline</strong></br>
 	Jan 2018 - April 2019</br></br>
 
-	<strong>Android Store</strong></br> 
+	<strong  class="topHeading">Android Store</strong></br> 
 			<a href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" target="_blank">
 			Download Link
 			</a></br></br>
