--- a/pages/sherpa.html
+++ b/pages/sherpa.html
@@ -356,7 +356,7 @@
 						<p class="sectionHeading"><strong>EVALUATION</strong></p>
 
 						<p class="contentTextDown"> 
-							In our evaluation plan, we planned three evaluation methods: Usability Expert Review, Bike Mechanic Review, and Usability Testing. However, we had to perform a discount evaluation, we chose to do the Usability Expert Review, but with the inclusion of task-based evaluation to make the review more holistic. Each session involved two to three people: the evaluator, the facilitator, and possibly an additional note taker if available. We created a high fidelity prototype (shown below) to test our proposed solution. We split our evaluation into two parts, the usability expert review and task-based evaluation.<br><br>
+							In our evaluation plan, we planned three evaluation methods: Usability Expert Review, Bike Mechanic Review, and Usability Testing. However, we had to perform a discount evaluation, we chose to do the Usability Expert Review, but with the inclusion of task-based evaluation to make the review more holistic. Each session involved two to three people: the evaluator, the facilitator, and an additional note taker. We created a high fidelity prototype (shown below) to test our proposed solution. We split our evaluation into two parts, the usability expert review and task-based evaluation.<br><br>
 							<strong>Participants</strong>- Five HCI cohorts who have been trained to evaluate a design considering usability specifications
  						<br><br>
 						</p>
@@ -366,44 +366,42 @@
 
 						<strong class="topHeading">Usability Expert Review</strong>
 						<p class="contentTextDown">
-						We decided this evaluation method should be completed first because it is a hierarchical process that will quickly reveal obvious flaws in our design.  Also given the scope of this project, it is much less resource-intensive compared to usability testing with our user group. <br>
-						Initially, the facilitator gave the evaluator an overview of the system and provided context including the user goals, concept features, and relevant scenarios. Once the facilitator felt that they had a good understanding of the concept, the evaluator was asked to freely navigate through the home, profile, and bike selector sections of the system. We asked the evaluator to think aloud while going through the design to understand their thought process and probe better insights. Here we wanted the evaluator to cover different features each time they went through the system and become familiar with the layout. <br>
-						Each evaluator had to consider the system for the usability specifications- Consistency, Customizability, Recoversability, Observability, and Responsiveness. For each usability specification we would like the evaluator to rate it with the following Likert scale of 0-4.
-
+						We decided this evaluation method should be completed first because it is a hierarchical process that will quickly reveal obvious flaws in our design.  Also given the scope of this project, it is much less resource-intensive compared to usability testing with our user group.
 						
+						Initially, the facilitator gave the evaluator an overview of the system and provided context including the user goals, concept features, and relevant scenarios. Once the facilitator felt that they had a good understanding of the concept, the evaluator was asked to freely navigate through the home, profile, and bike selector sections of the system. We asked the evaluator to think aloud while going through the design to understand their thought process and probe better insights. Here we wanted the evaluator to cover different features each time they went through the system and become familiar with the layout.
+						Each evaluator had to consider the system for the usability specifications- Consistency, Customizability, Recoversability, Observability, and Responsiveness.
+						</p><br>
 
-						</p>
 
 						<strong class="topHeading">Task-Based Evaluation</strong>
 						<p class="contentTextDown">
-							After the usability expert review section was complete the evaluators moved onto the task-based evaluation.  The evaluators went through each task described above and again were instructed to think aloud to describe their thought process.  We answered questions from the participant after each task and avoided giving instructions during the task.  After the final task was completed the participants were asked a few questions to further evaluate the design.<br>
+							After the usability expert review section was complete the evaluators moved onto the task-based evaluation. The evaluators went through each task described above and again were instructed to think aloud to describe their thought process.  We answered questions from the participant after each task and avoided giving instructions during the task.  After the final task was completed the participants were asked a few questions to further evaluate the design.
 							The task-based evaluation was included to make our evaluation more holistic.  We used the usability experts we recruited to go through tasks that did not involve repairing a bicycle and was considered the second part of our evaluation session.  Including this helped to evaluate the logic of our system and its features, as well as the information architecture. We came our participants three tasks that a typical user would perform:<br>
 							Task 1: Diagnose your flat tire<br>
 							Task 2: Find a nearby repair station<br>
 							Task 3: Go through the repair process<br>
-
-
-
-						</p>
+						</p><br>
 
 						<strong class="topHeading">Results</strong>
 						<p class="contentTextDown">
-							The quantitative data is from the usability expert evaluation of consistency, customizability, recoverability, observability, and responsiveness for our design as a whole.  From this, we should be able to determine what aspects of the design are reworked first, based on how high the average score is.  For each usability specification the evaluator rated it with the following Likert scale of 0-4:<br>
+							We used the qualitative data to rank the priority of issues that need to be addressed. We received the following scored on a scale of 1-5 (1 = highly disagree, 5 = highly agree):
+							<br>
+							<!-- 
 							0 - No issues, 
 							1 - Visual/cosmetic issue, 
 							2 - Minor issue, 
 							3 - Major issue, fix when possible, 
-							4 - Fix as soon as possible. <br><br>
-							We received the following scores:<br>
-							1. Consistency- 1.6<br>
-							2. Customizability- 0.8<br>
-							3. Recoverability- 1.6<br>
-							4. Observability- 1.2<br>
-							5. Responsiveness- 1.2<br><br>
+							4 - Fix as soon as possible. <br><br> 
+							We received the following scores:<br> -->
+							(1) Consistency		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 3.4<br>
+							(2) Customizability	&nbsp;	- 4.2<br>
+							(3) Recoversability	&nbsp;	- 3.4<br>
+							(4) Observability	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 3.8<br>
+							(5) Responsiveness	&nbsp;- 3.8<br><br>
 
 
 
-							Once we compiled the qualitative data, we could see the changes that needed to be made on a whole as well as individual level. We saw that some areas (like Consistency) required a more work than others. We were able to get task and even screen specific feedback. The data from the evaluation of the prototype was then analyzed to inform ongoing refinement of the design. Overall, we found participant reception to our prototype to be positive, and most issues could be solved with simple changes. <br>
+							Once we compiled the qualitative data, we could see the changes that needed to be made on a whole as well as individual level. We saw that some areas (like Consistency) required a more work than others. We were able to get task and screen specific feedback. The data from the evaluation of the prototype was then analyzed to inform ongoing refinement of the design. Overall, we found participant reception to our prototype to be positive, and most issues could be solved with simple changes. <br>
 
 
 
