--- a/pages/unav.html
+++ b/pages/unav.html
@@ -90,7 +90,7 @@
 				Increasing accessibility for NCR Kiosks for wheelchair users</br></br>
 
 				<strong class="topHeading">Solution Statement</strong></br>
-				Our solution aims to augment the uNav interface by creating an accessibility mode which changes the layout to make it more accessible using uNav control panel. The uNav Compatibility Mode targets user’s pain points on a community level for users who are using the uNav interface.<br><br>
+				Our solution aims to augment NCR's Kiosk accessibility feature, the uNav interface, by creating an accessibility mode which changes the layout and adds tabbed indexing for faster and smoother checkouts. The uNav Compatibility Mode targets wheelchair users and is compatible with all the current and future hardware solutions.<br><br>
 
 				<strong class="topHeading">Role</strong></br>
 			I conducted user experience research to finalize the design direction and performed usability tests on the prototype.
@@ -98,9 +98,9 @@
 
 
 			<strong class="topHeading">Team</strong></br>
-		Kevin Key, Varnit Jain, Benton Humphreys, Yunfei Wang </br></br>
-		<strong class="topHeading">Timeline</strong></br>
-	Aug 2019 - Nov 2019</br></br>
+			Benton Humphreys, Kevin Key, Varnit Jain, Yunfei Wang </br></br>
+			<strong class="topHeading">Timeline</strong></br>
+			Aug 2019 - Nov 2019</br></br>
 
 
 </div>
@@ -121,84 +121,59 @@
 		<p class="sectionHeading"><strong>RESEARCH</strong></p><br>
 
 
-		<p><strong>1. Market Research</strong></p>
+	<!-- 	<strong class="topHeading">Market Research</strong>
 		<p class="contentTextDown">
-	<!-- 		Self-service interactive devices are becoming more prevalent in our daily life and are continuously evolving, these self-service kiosks can be found in fast food restaurants, used as ATMs and acr as check-in stations at airports. While self-serving kiosks are quickly replacing manual service, the importance of accessibility for all consumers is recognized by the society. The Americans with Disabilities Act has required companies to follow regulations that ensure equal access for people with different types of disabilities. According to the ADA, there are certain requirements for technologies to grant people with disabilities with the same access to interactive technology and data, such as enough open space, high and side reach range. <br><br> -->
+			Self-service interactive devices are becoming more prevalent in our daily life and are continuously evolving, these self-service kiosks can be found in fast food restaurants, used as ATMs and acr as check-in stations at airports. While self-serving kiosks are quickly replacing manual service, the importance of accessibility for all consumers is recognized by the society. The Americans with Disabilities Act has required companies to follow regulations that ensure equal access for people with different types of disabilities. According to the ADA, there are certain requirements for technologies to grant people with disabilities with the same access to interactive technology and data, such as enough open space, high and side reach range. <br><br>
 
-			Analyzing the current NCR kiosk products for accessibility features reveals many intentional design choices. For NCR SelfServe checkout hardware, wheelchair height and reach have been considered for easier accessibility. These checkout hardware products also include UNav keypads, integrated headphone jacks, volume control, and tactile keys to assist users with physical, hearing, and visual impairments.  Specific accessibility considerations have been implemented for NCR ATMs, such as universal tactile features for ATM function keys and a touchscreen designed for users with visual impairment.  NCR ATMs also include interactive teller features, which allow users to communicate with a remote teller for assistance. <br><br>
-
-
+			Analyzing the current NCR kiosk products for accessibility features reveals many intentional design choices. For NCR SelfServe checkout hardware, wheelchair height and reach have been considered for easier accessibility. These checkout hardware products also include UNav keypads, integrated headphone jacks, volume control, and tactile keys to assist users with physical, hearing, and visual impairments.  Specific accessibility considerations have been implemented for NCR ATMs, such as universal tactile features for ATM function keys and a touchscreen designed for users with visual impairment.  NCR ATMs also include interactive teller features, which allow users to communicate with a remote teller for assistance. <br>
 			NCR has approached accessibility design with the inclusion of uNav, and it is important to understand how this fits into the context of the kiosk manufacturing market.  Out of NCR, Rockwell Collins , Toshiba, Fujitsu, IER SAS, and SITA, only NCR and IER SAS include physical hardware button controls as part of their accessibility design solution. All other manufacturers mentioned either do not include accessibility design or it is implemented within the software, requiring users to interact with a touch screen.  Since many manufacturers allow for custom kiosk software often times accessibility features and design may be overlooked entirely, especially when no physical buttons are implemented in the kiosk. <br><br>
+			Though uNav has been found to improve kiosk interaction, the lack of uniform accessibility design between kiosk manufacturers can be and has been problematic for users.  It has been suggested that kiosk manufacturers work together on kiosk accessibility to mitigate these issues. This is an interesting proposition considering that NCR’s patented uNav can be bought as a standalone unit to be implemented in other brands of kiosks.<br><br><br></p> -->
 
-			Though uNav has been found to improve kiosk interaction, the lack of uniform accessibility design between kiosk manufacturers can be and has been problematic for users.  It has been suggested that kiosk manufacturers work together on kiosk accessibility to mitigate these issues. This is an interesting proposition considering that NCR’s patented uNav can be bought as a standalone unit to be implemented in other brands of kiosks.<br><br><br></p>
 
-
-			<p><strong>2. Literature Review</strong></p>
+			<strong class="topHeading">Literature Review</strong>
 			<p class="contentTextDown">
-				There is an ever-growing field of research to suggest best practices for accessibility within digital design, yet there seems to be a lesser focus on integrating accessibility into kiosks. We have sourced, reviewed, and synthesized several prior research papers that either touch on kiosk accessibility or an applicable field (e.g. web design).<br><br>
-
-
-				Some of the key takeaways from literature review are:<br>
-				1. While we will not be focusing on the idea of mechanical adjustments, but the idea that a system can recognize and adapt to its user is something to be considered.<br>
-
+				There is an ever-growing field of research to suggest best practices for accessibility within digital design, yet there seems to be a lesser focus on integrating accessibility into kiosks. We have sourced, reviewed, and synthesized several prior research papers that either touch on kiosk accessibility or an applicable field (e.g. web design). Some of the key takeaways from literature review are:<br>
+				1. There is a lot of research focusing on the idea of mechanical adjustments. Our approach will not be focused on that  but the idea that a system can recognize and adapt to its user is something to be considered.<br>
 				2. Many models exist that can be good reference points if we need to do an overall accessibility test of kiosks, or understanding how other kiosks have improved physical accessibility.<br>
+				3. A good contextual enquiry can be very insightful - they are not only able to correct the user flow but are also able to add additional features.<br><br></p>
 
-				3. A good contextual enquiry can be very insightful - they are not only able to correct the user flow but are also able to add additional features.<br><br>
 
 
-				<br><br></p>
 
-				<p><strong>3. Task Analysis</strong></p>
+				<strong class="topHeading">Observation</strong>
 				<p class="contentTextDown">
 
-					‍As a starting point, we decided to first complete a task analysis of the XK32 kiosk. This allowed us to familiarize ourselves with the overall feel of the system, understand interactions from a high level, and prompted us to understand the limitations of the system for those with physical disabilities. The task analysis begins from the moment that a user approaches the kiosk with the intent to order a meal and ends with the completion of the interaction, when they pay for and receive a receipt for their order. Our contact at NCR was unable to provide wireframes to us due to confidentiality concerns, but were able to provide screen grabs of every screen.<br><br>
-
-					It is important to note that the specific information displayed on the kiosk depends entirely on the context in which it is used. For instance, if the kiosk is located in a certain restaurant it will only display information pertinent to that restaurant. If it is located in a food court, however, it will display options for several restaurants. Therefore, the task analysis we created represents a general overview of the interactions a user will experience, separated by what is experienced in a food court-type of context from a dedicated-restaurant context.<br><br>
-
-					<strong>Infromation Goal</strong><br>
-				We conducted a task analysis to primarily learn about the user flow and the decision-making process of a user as they interact with the XK32 kiosk. The ordering process on the XK32 kiosk can involve many steps from start to completion, so it was necessary to understand how these steps connected to one another and how a user typically navigates from the start screen to order completion, and follows them during the entire ordering process. By understanding how the system currently operates, we were able to form a baseline on which we could develop further research efforts.</p>
-
-				<img src="unav-task.png" class="middleImg" width="100%"><br><br>
-
-
-				<p><strong>4. Observation</strong></p>
-				<p class="contentTextDown">
-
-					‍In order to better understand how users interact with the current system, our team decided to observe users interacting with the kiosk during lunch hour at NCR. Though our target user group consists of those with disabilities, we found it important to observe all users who might interact with our system. Any design that targets those with physical disabilities will also affect how others interact with the system.<br><br>
-
-
-
-					<strong>Infromation Goal</strong><br><br>
-					Our goal with observation was mostly exploratory and built off of our task analysis. The task analysis we completed served as the base to form this observation study. All though the task analysis informed us of the overall flow a user must take to complete a transaction, it did not highlight any pain points or inform any subjective feelings the users might have about the system. We wanted to determine if users experienced difficulty with any point of the ordering process due to usability issues.<br>
-				Additionally, we aimed to explore baseline data on the learnability of the kiosk interface. In short, we wanted to know how a novice user interacts with the system compared to a user that has been familiar with the system for some time. We felt this was an important step in deciding how users of different experience levels interacted with the system, and we rationalized that we could use this information to inform design decisions in subsequent sections.</p>
+				In order to better understand how users interact with the current system, our team decided to observe users interacting with the kiosk during lunch hour at NCR. Though our target user group consists of those with disabilities, we found it important to observe all users who might interact with our system. Any design that targets those with physical disabilities will also affect how others interact with the system.<br>
+				Our goal with observation was mostly exploratory and built off of our task analysis. We wanted to determine if users experienced difficulty with any point of the ordering process due to usability issues. Additionally, we aimed to explore baseline data on the learnability of the kiosk interface. In short, we wanted to know how a novice user interacts with the system compared to a user that has been familiar with the system for some time. We felt this was an important step in deciding how users of different experience levels interacted with the system, and we rationalized that we could use this information to inform design decisions in subsequent stages.<br></p>
 
 				<img src="unav-observations.jpg" class="middleImg" width="30%"><br><br>
 
 
-				<p><strong>4. Semi-Structure Interview</strong></p>
+
+				<strong class="topHeading">Task Analysis</strong>
 				<p class="contentTextDown">
 
-					‍Our team decided to conduct a semi-structured one-on-one interview as our first research method involving a physically disabled user within the problem space. A one-on-one interview was logistically easier to setup than a focus group and allowed for a very personal conversation compared to other research methods. Using a semi-structured interview allowed our team to answer specific questions we had, but still explore the problem space by having an open discussion. We held our interview in the Usability Lab in Georgia Tech and it lasted about an hour.<br><br>
+				A task analysis allowed us to familiarize ourselves with the overall feel of the system, understand interactions from a high level, and prompted us to understand the limitations of the system for those with physical disabilities. We performed one to primarily learn about the user flow and the decision-making process of a user as they interact with the XK32 kiosk. The ordering process on the XK32 kiosk can involve many steps from start to completion, so it was necessary to understand how these steps connected to one another and how a user typically navigates from the start screen to order completion, and follows them during the entire ordering process. By understanding how the system currently operates, we were able to form a baseline on which we could develop further research efforts.<br><br>
+				</p>
 
+				<img src="unav-task.png" class="middleImg" width="100%"><br><br>
 
-					<strong>Infromation Goal</strong><br><br>
-					Our main information goal from this research method was to gain insight into our user group’s wants and needs regarding digital technology accessibility. After conducting our observation it was clear that the kiosk has general usability issues, but we needed to focus on select issues affecting physically disabled users. Another goal was to understand the limitations of wheelchair users during point of sale transactions due to their seated position. Our understanding prior to the interview was that not all kiosks were designed with wheelchair height in mind for usability.
+				<strong class="topHeading">Semi-Structure Interview</strong>
+				<p class="contentTextDown">
 
-					Beyond this, we wanted to determine specific pain points that our interviewee had with kiosk accessibility. We also wanted to know what public technologies they currently found helpful, whether or not it was implemented in point of sale kiosks. We also went into the interview with the idea that we could potentially narrow down our user group if given the opportunity.<br><br></p>
+					‍We decided to conduct a semi-structured one-on-one interview as our first research method involving a physically disabled user within the problem space. Our main information goal from this research method was to gain insight into our user group’s wants and needs regarding digital technology accessibility. After conducting our observation it was clear that the kiosk has general usability issues, but we needed to focus on select issues affecting physically disabled users. Another goal was to understand the limitations of wheelchair users during point of sale transactions due to their seated position. Our understanding prior to the interview was that not all kiosks were designed with wheelchair height in mind for usability.
+
+					Beyond this, we wanted to determine specific pain points that our interviewee had with kiosk accessibility. We also wanted to know what public technologies they currently found helpful, whether or not it was implemented in point of sale kiosks. We also went into the interview with the idea that we could potentially narrow down our user group if given the opportunity.
+
+					<br><br></p>
 
 					<img src="unav-interview.JPG" class="middleImg" width="80%"><br><br>
 
-					<p><strong>5. Survey</strong></p>
+					<strong class="topHeading">Survey</strong>
 					<p class="contentTextDown">
 
-						‍We chose an online survey as a research method to collect data largely because of its ability to collect data from a substantial set of users in a short time. Our preference was to do an in depth cognitive walkthrough of NCR’s system, but due to the lack of sourced participants this was unable to be completed before the research needed to be completed. Unfortunately, NCR was not able to fund in person interviews which provides less incentive for our user group. Also, we hoped to have our IRB protocol approved in time to source participants from Georgia Tech labs, but this was not the case.  Ultimately, we used an online survey as an alternative due to lack of participants willing to meet in person.<br><br>
-
-
-						<strong>Infromation Goal</strong><br><br>
-
-
-
-					A main information goal of using a survey was to learn what users with disabilities like and dislike about point of sale kiosks. Another goal was to learn how users’ disabilities hinder specific interactions with a kiosk. Based on our previous research methods we decided another goal was to learn about common frustrations at each stage of the process of completing a checkout. A secondary information goal was to refine our user group by recognizing common problem areas and patterns. Another secondary information goal was to determine if certain users prefer tactile interaction versus touch screen and for completing what tasks.</p>
+					We chose an online survey as a research method to collect data largely because of its ability to collect data from a substantial set of users in a short time. We wanted to learn what users with disabilities like and dislike about point of sale kiosks. We wanted to know how users’ disabilities hinder specific interactions with a kiosk. Based on our previous research methods we decided another goal was to learn about common frustrations at each stage of the process of completing a checkout. An secondary information goal was to refine our user group by recognizing common problem areas and patterns. We also wanted to determine if certain users prefer tactile interaction versus touch screen and for completing what tasks.
+					<br><br></p>
 
 
 
