--- a/pages/virtual.html
+++ b/pages/virtual.html
@@ -78,7 +78,7 @@ s
 
 			<p class="contentTextDown">
 
-					‍<br><strong>Abstract</strong></br>
+					‍<br><strong  class="topHeading">Abstract</strong></br>
 					Often Virtual Reality (VR) experiences are limited by the design of standard controllers. This work aims to liberate a VR developer from these limitations in the physical realm to provide an expressive match to the limitless possibilities in the virtual realm. VirtualBricks is a LEGO based toolkit that enables construction of a variety of physical-manipulation enabled controllers for VR, by ofering a set of feature bricks that emulate as well as extend the capabilities of default controllers. Based on the LEGO platform, the toolkit provides a modular, scalable solution for enabling passive haptics in VR.  <br><br>
 
 				</p>
@@ -93,13 +93,12 @@ s
 
 					
 
-					<strong>Role</strong></br>
-				VR Experience Design and Development</br>
-				Arduino Development
+				<strong  class="topHeading">Role</strong></br>
+				I designed and developed the Virtual Reality Applications to test the experience of various use cases. I was also responsible for creating a custom Unity package that enabled developed to integrate VR Apps with our hardware. I created a channel of communication between the custom hardware and unity so that we could receive sensors data without lag.
 				<br><br>
 
 
-				<strong>Team</strong></br>
+				<strong  class="topHeading">Team</strong></br>
 				Jatin Arora,
 				Varnit Jain,
 				Nirmita Mehra,
@@ -108,15 +107,15 @@ s
 				Shwetank Shrey
 			</br></br>
 
-			<strong>Timeline</strong></br> May 2018 - Sept 2018</br></br>
+			<strong  class="topHeading">Timeline</strong></br> May 2018 - Sept 2018</br></br>
 
-			<strong>DOI</strong></br> 
+			<strong  class="topHeading">DOI</strong></br> 
 			<a href="https://dl.acm.org/citation.cfm?id=3300286
 			" target="_blank">
 			https://dl.acm.org/citation.cfm?id=3300286
 			</a></br></br>
 
-			<strong>Full Paper</strong></br> 
+			<strong  class="topHeading">Full Paper</strong></br> 
 			<a href="virtual-paper056.pdf
 			" target="_blank">
 			Download Link
