--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
 			<div class="container">
 				<!-- <h1 class="display-4">Hi</h1> -->
 				<h1>Hi</h1>
-				<p>I am a postgraduate at Georgia Institute of Technology, working in the field of Human–Computer Interaction. I am looking for an internship for summer 2020 that will challenge me to solve everyday problems using creative solutions while enabling me to contribute, learn, and grow. My background in HCI and CS enables me to understand user needs and build technological opportunities that will help solve them.
+				<p>
+
+				<!-- I am looking for an internship for summer 2020 that will challenge me to solve everyday problems using creative solutions while enabling me to contribute, learn, and grow.  -->
+
+				I am a postgraduate at Georgia Institute of Technology, working in the field of Human-Computer Interaction. I like working on projects that enable new possibilities for people with limited technical and social skills. My background in HCI and CS enables me to understand user needs and build technological opportunities that will help solve them. 
+
 
 					<!-- My objective is to help
 					<span class="notice">&nbsp;Simplify&nbsp; </span> 
